Refactor layout and improve responsive styles
Updated index.html structure to use a wrapper div and improved the picture markup for better responsiveness. Enhanced style.css with rem units for font sizes, added flexbox-based layout for centering, and introduced responsive styles for image and content sections. These changes improve maintainability and visual consistency across devices.

--- a/index.html
+++ b/index.html
@@ -33,35 +33,43 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
-    <main class="picture">
-      <picture>
-        <source
-          media="(min-width: 600px)"
-          src="/images/image-product-desktop.jpg"
-        />
-        <img src="/images/image-product-mobile.jpg" alt="permufe-picture" />
-      </picture>
-    </main>
+    <div class="wrapper">
+      <div class="picture">
+        <div class="picture">
+          <picture>
+            <source
+              media="(min-width: 700px)"
+              srcset="/images/image-product-desktop.jpg"
+            />
 
-    <div class="content">
-      <section class="text">
-        <p>PERFUME</p>
-        <h1>Gabrielle Essence Eau De Parfum</h1>
-        <p>
-          A floral, solar and voluptuous interpretation composed by Olivier
-          Polge, Perfumer-Creator for the House of CHANEL.
-        </p>
-      </section>
+            <img
+              src="/images/image-product-mobile.jpg"
+              alt="Product description"
+            />
+          </picture>
+        </div>
+      </div>
+      <div class="content">
+        <section class="text">
+          <p>PERFUME</p>
+          <h1>Gabrielle Essence Eau De Parfum</h1>
+          <p>
+            A floral, solar and voluptuous interpretation composed by Olivier
+            Polge, Perfumer-Creator for the House of CHANEL.
+          </p>
+        </section>
 
-      <section class="pricing">
-        <h2>$149.99</h2>
-        <p>$169.99</p>
-      </section>
+        <section class="pricing">
+          <h2>$149.99</h2>
+          <p>$169.99</p>
+        </section>
 
-      <button type="button" class="mybutton">
-        <img src="/images/icon-cart.svg" alt="cart-icon" />Add to Cart
-      </button>
+        <button type="button" class="mybutton">
+          <img src="/images/icon-cart.svg" alt="cart-icon" />Add to Cart
+        </button>
+      </div>
     </div>
 
     <div class="attribution">
